--- a/research.html
+++ b/research.html
@@ -105,6 +105,17 @@
 			<tr><td><table align="left" cellpadding="15">
 				<tr><td><img src="images/Book.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Dissertation.png" height="25"></td></tr>
 				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (2024). MDPI.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					-->
+				</td></tr>
+				<tr><td>
 					<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (2024). INSTICC.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
