--- a/research.html
+++ b/research.html
@@ -642,32 +642,32 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Program Chair (PC)</td>
+					<td align="center">Program Chair (PC)</td>
 					<td>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), Rome, Itaty
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Technical Program Chair (TPC)</td>
+					<td align="center">Technical Program Co-Chair (Co-TPC)</td>
 					<td>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="12" class="pop5"></a> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Kunming, China
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Area Chair (AC)</td>
+					<td align="center">Area Chair (AC)</td>
 					<td>
 						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="12" class="pop5"></a> - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
 						&#9679; <a href="https://www.ceii.asia/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="12" class="pop5"></a> - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Publicity Chair</td>
+					<td align="center">Publicity Chair</td>
 					<td>
 						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="12" class="pop5"></a> - 2<sup>nd</sup>  International Conference on AI-generated Content, Beijing, China
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Session Chair</td>
+					<td align="center">Session Chair</td>
 					<td>
 						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> - 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
 						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> - 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
@@ -677,7 +677,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For 43 international journals, including Nat. Commun., Biomed. Signal Process. Control, Geo-Spat. Inf. Sci., Remote Sens., Front. Plant Sci., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
+						&#9679; For 43 international journals, including Nat. Commun., IEEE Sens. J., Biomed. Signal Process. Control, Geo-Spat. Inf. Sci., Remote Sens., Front. Plant Sci., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
@@ -694,14 +694,18 @@
 						Karlsruher Institut für Technologie - KD<sup>2</sup>school Adaptive Systems Talks, Karlsruhe, Germany 2022: Smart Knee Bandage <img src="images/KD2School_Workshop.png" height="12" class="pop20">
 				</tr>
 				<tr>
-					<td align="center">Open-Source Codebank<br>and Tutorial Contributor</td>
+					<td align="center">Open-Source Codebank, Dataset, and Tutorial Contributor</td>
 					<td>
 						&#9679; <img src="images/biosignalsnotebooks.png" height="12" class="pop10"></a> 
 						Biosignals Notebooks: Online Sensor-based AI Tutorial and Code Sharing<br>
 						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSFEL.png" height="12" class="pop10"></a> 
-						TSFEL: Time Series Feature Extraction Library<br>
+						<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSFEL</a>: Time Series Feature Extraction Library<br>
 						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSSEARCH.png" height="12" class="pop10"></a> 
-						TSSEARCH: Time Series Subsequence Search Library<br>
+						<a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSSEARCH</a>: Time Series Subsequence Search Library<br>
+						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">CSL-SHARE</a>:
+						Sensor-based Human Activity Recordings<br>
+						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/sensorder-artifact-classification-during-biosignal-acquisition" target="_blank" rel="noopener noreferrer">sensORder</a>:
+						ECG dataset for artifact classification during biosignal acquisition
 					</td>
 				</tr>
 				<tr>
