--- a/researchcn.html
+++ b/researchcn.html
@@ -650,7 +650,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议 Technical Program Chair (TPC)</td>
+					<td align="center">学术会议 Technical Program Co-Chair (Co-TPC)</td>
 					<td>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="12" class="pop5"></a> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国昆明
 					</td>
@@ -679,7 +679,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">审稿人</a></td>
 					<td>
-						&#9679; 43本国际期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Plant Sci.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
+						&#9679; 43本国际期刊，包括Nat. Commun.、IEEE Sens. J.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Plant Sci.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰“极其高水平的同行评审胜任力”（<i>an exceptionally high level of peer review competency</i>）<br>
 						&#9679; Sensors <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 最佳审稿人奖</a>
@@ -693,11 +693,17 @@
 						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 卡尔斯鲁厄理工学院KD<sup>2</sup>school适应性系统年度座谈会，德国卡尔斯鲁厄，2022：<i>智能膝盖绷带</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20">
 				</tr>
 				<tr>
-				<td align="center">开源资料库贡献者</td>
+				<td align="center">开源代码库、大数据和在线教程贡献者</td>
 					<td>
 						&#9679; <img src="images/biosignalsnotebooks.png" height="12" class="pop10"></a> Biosignals Notebooks：传感器信号处理和人工智能线上教程和代码集<br>
-						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSFEL.png" height="12" class="pop10"></a> TSFEL：时序信号特征提取代码库<br>
-						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSSEARCH.png" height="12" class="pop10"></a> TSSEARCH：时序信号子序列搜索代码库<br>
+						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSFEL.png" height="12" class="pop10"></a> 
+						<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSFEL</a>：时序信号特征提取代码库<br>
+						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSSEARCH.png" height="12" class="pop10"></a> 
+						<a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSSEARCH</a>：时序信号子序列搜索代码库<br>
+						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">CSL-SHARE</a>:
+						多模态可穿戴式人体动作传感大数据集<br>
+						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/sensorder-artifact-classification-during-biosignal-acquisition" target="_blank" rel="noopener noreferrer">sensORder</a>:
+						心电采集过程中的各种实时伪影数据集
 					</td>
 				</tr>
 				<tr>
