--- a/research.html
+++ b/research.html
@@ -150,6 +150,17 @@
 			
 				<tr><td><img src="images/Chapter.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="25"></td></tr>
 				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</td></tr>
+				-->
+				<tr><td>
 					<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors, 24(15):5250.<br>
 					<a href="https://scholar.google.com/scholar?q=Human+Activity+Recognition%2C+Monitoring%2C+and+Analysis+Facilitated+by+Novel+and+Widespread+Applications+of+Sensors" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
@@ -209,6 +220,17 @@
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				-->
+				</td></tr>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i></i>Robust Human Interaction Recognition Using Extended Kalman Filter.</i> Jalal, A., Bukht, T. F. N., Alazeb, A., Al Mudawi, N., Alabdullah, B, Alnowaiser, Kl., and Liu, H.* (2024). Computer, Materials & Continua. Tech Science Press.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -387,7 +409,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Bell-Shape-Embodying-Zhongyong%3A-The-Pitch-Histogram-Liu-Jiang/db1523092f1e528af3ce41385843e862b74f0ff2" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/362837075_Bell_Shape_Embodying_Zhongyong_The_Pitch_Histogram_of_Traditional_Chinese_Anhemitonic_Pentatonic_Folk_Songs" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/2076-3417/12/16/8343" target="_blank" rel="noopener noreferrer"><img src="images/Applied_Sciences.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/bell-shape-embodying-zhongyong-the-pitch-histogram-of-traditional" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.PNG" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/bell-shape-embodying-zhongyong-the-pitch-histogram-of-traditional" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://run.unl.pt/handle/10362/145647" target="_blank" rel="noopener noreferrer"><img src="images/RUN.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2022pentatonic_bell_shape&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/app12168343" target="_blank" rel="noopener noreferrer">10.3390/app12168343</a>
@@ -399,7 +421,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/359648631_TSSEARCH_Time_Series_Subsequence_Search_Library" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711022000425" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.aicos.fraunhofer.pt/en/publications.html" target="_blank" rel="noopener noreferrer"><img src="images/Aicos.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tssearch-time-series-subsequence-search-library" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.PNG" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tssearch-time-series-subsequence-search-library" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://run.unl.pt/handle/10362/143322" target="_blank" rel="noopener noreferrer"><img src="images/RUN.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=folgado2022tssearch&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/fraunhoferportugal/tssearch" target="_blank" rel="noopener noreferrer"><img src="images/GitHub.png" height="15"></a>
@@ -422,7 +444,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/TSFEL%3A-Time-Series-Feature-Extraction-Library-Barandas-Folgado/30d86ed68c163455b8f3ef10a5bf4c92ee8707bc" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/340085788_TSFEL_Time_Series_Feature_Extraction_Library" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711020300017" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tsfel-time-series-feature-extraction-library" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.PNG" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tsfel-time-series-feature-extraction-library" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://run.unl.pt/handle/10362/117283" target="_blank" rel="noopener noreferrer"><img src="images/RUN.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=barandas2020tsfel&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/fraunhoferportugal/tsfel" target="_blank" rel="noopener noreferrer"><img src="images/GitHub.png" height="15"></a>
