--- a/researchcn.html
+++ b/researchcn.html
@@ -152,6 +152,17 @@
 			
 				<tr><td><img src="images/Chapter.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="25"></td></tr>
 				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</td></tr>
+				-->
+				<tr><td>
 					<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors, 24(15):5250.<br>
 					<a href="https://scholar.google.com/scholar?q=Human+Activity+Recognition%2C+Monitoring%2C+and+Analysis+Facilitated+by+Novel+and+Widespread+Applications+of+Sensors" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
@@ -211,6 +222,17 @@
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				-->
+				</td></tr>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i></i>Robust Human Interaction Recognition Using Extended Kalman Filter.</i> Jalal, A., Bukht, T. F. N., Alazeb, A., Al Mudawi, N., Alabdullah, B, Alnowaiser, Kl., and Liu, H.* (2024). Computer, Materials & Continua. Tech Science Press.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
