--- a/research.html
+++ b/research.html
@@ -101,9 +101,13 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (54)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td><img src="images/Book.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Dissertation.png" height="25"></td></tr>
+			
+				<tr><td>
+					<img src="images/Book.png" height="15">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Dissertation.png" height="15">&nbsp;&nbsp;
+					<img src="images/4.png" height="15">
+				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Sensors for Human Activity Recognition II.</i> Liu, H., Gamboa, H., and Schultz, T. (2024). MDPI.<br>
@@ -148,7 +152,21 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.26092/elib/1219" target="_blank" rel="noopener noreferrer">10.26092/elib/1219</a>
 				</td></tr>
 			
-				<tr><td><img src="images/Chapter.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="25"></td></tr>
+				<tr><td>
+					<img src="images/Chapter.png" height="15">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="15">&nbsp;&nbsp;
+					<img src="images/7.png" height="15">
+				</td></tr>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsps;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</td></tr>
+				-->
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2024). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland<br>
@@ -216,7 +234,20 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-319-67190-1" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 				</td></tr>
 			
-				<tr><td><img src="images/Journal.png" height="25"></td></tr>
+				<tr><td>
+					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
+					<img src="images/2.png" height="15"><img src="images/4.png" height="15">
+				</td></tr>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Almujally, N. A., Rafique, A. A., Mudawi, N. A., Alazeb, A., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				-->
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
@@ -453,7 +484,10 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<b>(Top-cited on <a href="https://www.journals.elsevier.com/softwarex" target="_blank" rel="noopener noreferrer">Software X</a>)
 				</td></tr>
 			
-				<tr><td><img src="images/Conference.png" height="25"></td></tr>
+				<tr><td>
+					<img src="images/Conference.png" height="15">&nbsp;&nbsp;
+					<img src="images/1.png" height="15"><img src="images/9.png" height="15">
+				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>LSTM-MorA: Melody-Accompaniment Classification of MIDI Tracks.</i> Liu, H.*, Flaack, L., Zhang, S., and Schultz, T. (2024). In ICANN 2024 - 33rd International Conference on Artificial Neural Networks.<br>
