--- a/enkas/よ.html
+++ b/enkas/よ.html
@@ -17,7 +17,7 @@
 <br>
 1 赤い鼻緒が　ぷつりと切れた<br>
 すげてくれる手　ありゃしない<br>
-置いてけ堀ぼりをけとばして<br>
+置いてけ<ruby><rb>堀</rb><rt>ぼり</rt></ruby>をけとばして<br>
 駆けだす　指に血がにじむ<br>
 <br>
 さくら　さくら<br>
