--- a/research.html
+++ b/research.html
@@ -227,17 +227,6 @@
 				-->
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-				-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i></i>Robust Human Interaction Recognition Using Extended Kalman Filter.</i> Jalal, A., Bukht, T. F. N., Alazeb, A., Al Mudawi, N., Alabdullah, B, Alnowaiser, Kl., and Liu, H.* (2024). Computer, Materials & Continua. Tech Science Press.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -314,7 +303,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24103032" target="_blank" rel="noopener noreferrer">10.3390/s24103032</a>
 				</td></tr>
 				<tr><td>
-					<i>TPRO-NET: An EEG-Based Emotion Recognition Method Feflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports, 14:13491. Springer Nature.<br>
+					<i>TPRO-NET: An EEG-Based Emotion Recognition Method Reflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports, 14:13491. Springer Nature.<br>
 					<a href="https://scholar.google.com/scholar?q=TPRO-NET%3A+An+EEG-Based+Emotion+Recognition+Method+Feflecting+Subtle+Changes+in+Emotion" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 				    &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/TPRO-NET%3A-an-EEG-based-emotion-recognition-method-Zhang-Cheng/5b1c1fa371e436215731026398119a2882a13cb4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/381352163_TPRO-NET_an_EEG-based_emotion_recognition_method_reflecting_subtle_changes_in_emotion" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -323,6 +312,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=zhang2024eeg_emotion&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-024-62990-4" target="_blank" rel="noopener noreferrer">10.1038/s41598-024-62990-4</a>
 				</td></tr>	
+				<tr><td>
+					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
+					<a href="https://scholar.google.com/scholar?q=Template-Based+Synergy+Extrapolation+Analysis+for+Prediction+of+Muscle+Excitations" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Template-based-synergy-extrapolation-analysis-for-Li-Wang/4a53818d9bdc84e8f3f6926ce67f6240f3a27867" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/383771707_Template-based_synergy_extrapolation_analysis_for_prediction_of_muscle_excitations" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://iopscience.iop.org/article/10.1088/1361-6579/ad7776" target="_blank" rel="noopener noreferrer"><img src="images/IOP.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=li2024extrapolation_muscle_excitations&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1088/1361-6579/ad7776" target="_blank" rel="noopener noreferrer">10.1088/1361-6579/ad7776</a>
+				</td></tr>
 				<tr><td>
 					<i>A Robust Multimodal Detection: Physical Exercise Monitoring in Long-Term Care Environments.</i> Al Mudawi, N, Batool M., Alazeb A., Alqahtani Y., Almujally, N. A., Algarni A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Bioengineering and Biotechnology, 12:.1398291.<br>
 					<a href="https://scholar.google.com/scholar?q=A+Robust+Multimodal+Detection%3A+Physical+Exercise+Monitoring+in+Long-Term+Care+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
