--- a/research.html
+++ b/research.html
@@ -217,16 +217,6 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Almujally, N. A., Rafique, A. A., Mudawi, N. A., Alazeb, A., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-				-->
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i></i>Robust Human Interaction Recognition Using Extended Kalman Filter.</i> Jalal, A., Bukht, T. F. N., Alazeb, A., Al Mudawi, N., Alabdullah, B, Alnowaiser, Kl., and Liu, H.* (2024). Computer, Materials & Continua. Tech Science Press.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -313,6 +303,14 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-024-62990-4" target="_blank" rel="noopener noreferrer">10.1038/s41598-024-62990-4</a>
 				</td></tr>	
 				<tr><td>
+					<i>Semantic Segmentation and YOLO Detector over Aerial Vehicle Images.</i> Quresh, A. M., Butt, A. H., Alazeb, A., Al Mudawi, N., Alonazi, M., Almujally, N. A., Jalal, A., and Liu, H.* (2024).  Computer, Materials & Continua, 80(2):3315-3332. Tech Science Press.<br>
+					<a href="https://scholar.google.com/scholar?q=Semantic+Segmentation+and+YOLO+Detector+over+Aerial+Vehicle+Images" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Semantic-Segmentation-and-YOLO-Detector-over-Aerial-Qureshi/280b84a3d90003c24c1d6c032227387d23fcea2b" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/383167511_Semantic_Segmentation_and_YOLO_Detector_over_Aerial_Vehicle_Images" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/v80n2/57623" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2024.052582" target="_blank" rel="noopener noreferrer">10.32604/cmc.2024.052582</a>
+				</td></tr>
+				<tr><td>
 					<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Wang, D., Chen, Z, Guo, D, Pan, S., Liu, H., Zhou, C.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
 					<a href="https://scholar.google.com/scholar?q=Template-Based+Synergy+Extrapolation+Analysis+for+Prediction+of+Muscle+Excitations" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Template-based-synergy-extrapolation-analysis-for-Li-Wang/4a53818d9bdc84e8f3f6926ce67f6240f3a27867" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -346,13 +344,13 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 				<tr><td>
-					<i>Semantic Segmentation and YOLO Detector over Aerial Vehicle Images.</i> Quresh, A. M., Butt, A. H., Alazeb, A., Al Mudawi, N., Alonazi, M., Almujally, N. A., Jalal, A., and Liu, H.* (2024).  Computer, Materials & Continua, 80(2):3315-3332. Tech Science Press.<br>
-					<a href="https://scholar.google.com/scholar?q=Semantic+Segmentation+and+YOLO+Detector+over+Aerial+Vehicle+Images" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Semantic-Segmentation-and-YOLO-Detector-over-Aerial-Qureshi/280b84a3d90003c24c1d6c032227387d23fcea2b" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/383167511_Semantic_Segmentation_and_YOLO_Detector_over_Aerial_Vehicle_Images" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/v80n2/57623" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2024.052582" target="_blank" rel="noopener noreferrer">10.32604/cmc.2024.052582</a>
-				</td></tr>
+					<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Almujally, N. A., Rafique, A. A., Mudawi, N. A., Alazeb, A., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics.<br>
+					<a href="https://scholar.google.com/scholar?q=Multi-modal+remote+perception+learning+for+object+sensory+data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					-->		
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/384147762_Multi-modal_remote_perception_learning_for_object_sensory_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2024.1427786/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1427786" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1427786</a>
 				<tr><td>
 					<i>Enhanced Data Mining and Visualization of Sensory-Graph-Modeled Datasets through Summarization.</i> Hashmi, S. J., Alabdullah, B., Al Mudawi, N., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors, 24(14):4554.<br>
 					<a href="https://scholar.google.com/scholar?q=Enhanced+Data+Mining+and+Visualization+of+Sensory-Graph-Modeled+Datasets+through+Summarization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
